--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
                     <p>Rp. 40.000,-</p>
                     <a href="https://wa.wizard.id/77ab83"><button>BUY NOW</button></a>
                 </div>
+                <div class="card">
+                    <img src="./asset/matcha-cookies-featured.jpg" alt="product 1">
+                    <h3>Matcha cookie</h3>
+                    <p>Rp. 40.000,-</p>
+                    <a href="https://wa.wizard.id/77ab83"><button>BUY NOW</button></a>
+                </div>
+                <div class="card">
+                    <img src="./asset/Rainbow-Chip-Cookies-on-a-white-plate.webp" alt="product 1">
+                    <h3>Rainbow cookie</h3>
+                    <p>Rp. 40.000,-</p>
+                    <a href="https://wa.wizard.id/77ab83"><button>BUY NOW</button></a>
+                </div>
                 
             </div>
         </div>
